--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+    frontend:
+        build: 
+            context: ./frontend
+        container_name: frontend
+        ports:
+            - '3000:3000'
+        restart: always
     service1:
         build: 
             context: ./service1
