--- a/kube.yml
+++ b/kube.yml
@@ -7,10 +7,30 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 8080
+    - port: 3000
       protocol: TCP
       targetPort: 3000
       nodePort: 31118
+    - port: 5000
+      protocol: TCP
+      targetPort: 5000
+      nodePort: 31119
+    - port: 5001
+      protocol: TCP
+      targetPort: 5001
+      nodePort: 31120
+    - port: 5002
+      protocol: TCP
+      targetPort: 5002
+      nodePort: 31121
+    - port: 5003
+      protocol: TCP
+      targetPort: 5003
+      nodePort: 31122
+    - port: 5004
+      protocol: TCP
+      targetPort: 5004
+      nodePort: 31123
   selector:
     app: k8s-demo
 ---
@@ -55,15 +75,15 @@ spec:
         ports:
         - containerPort: 5004
           protocol: TCP
-      # - name: k8s-demo-service3
-      #   image: kantlove/k8s-demo-service3
-      #   imagePullPolicy: Always
-      #   ports:
-      #   - containerPort: 5002
-      #     protocol: TCP
-      # - name: k8s-demo-service4
-      #   image: kantlove/k8s-demo-service4
-      #   imagePullPolicy: Always
-      #   ports:
-      #   - containerPort: 5003
-      #     protocol: TCP
+      - name: k8s-demo-service3
+        image: kantlove/k8s-demo-service3
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 5002
+          protocol: TCP
+      - name: k8s-demo-service4
+        image: kantlove/k8s-demo-service4
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 5003
+          protocol: TCP
